cmake_minimum_required(VERSION 3.1)
project(cadmium)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

add_library(cadmium INTERFACE)
target_include_directories(cadmium INTERFACE include/ json/include)

FILE(GLOB Examples RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/main.cpp)
foreach(exampleSrc ${Examples})
    get_filename_component(exampleName ${exampleSrc} NAME_WE)
    get_filename_component(dirname ${exampleSrc} DIRECTORY)
    file(GLOB directorySrc CONFIGURE_DEPENDS "${dirname}/src/*.cpp")
    add_executable(${exampleName} ${exampleSrc} ${directorySrc})
    target_include_directories(${exampleName} PUBLIC "${dirname}/include")
    target_link_libraries(${exampleName} cadmium)
endforeach(exampleSrc)

FILE(GLOB Tests RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} test/*.cpp)
foreach(testSrc ${Tests})
    get_filename_component(testName ${testSrc} NAME_WE)
    add_executable(${testName} ${testSrc} )
    target_include_directories(${testName} PUBLIC "src/include")
    target_link_libraries(${testName} cadmium)
endforeach(testSrc)


# find_package(Boost COMPONENTS system filesystem unit_test_framework)
# if(Boost_FOUND)
#     add_definitions(-DBOOST_TEST_DYN_LINK)
#     enable_testing()
#     FILE(GLOB Tests RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} test/test_*.cpp)
#     foreach(testSrc ${Tests})
#         get_filename_component(testName ${testSrc} NAME_WE)
#         string(REGEX MATCH "[a-z]+$" useCase ${testName})
#         file(GLOB directorySrc CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
#         add_executable(${testName} ${testSrc} ${directorySrc})
#         target_include_directories(${testName} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
#         target_include_directories(${testName} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src/include")
#         target_link_libraries(${testName} cadmium ${Boost_FILESYSTEM_LIBRARY}
#                 ${Boost_SYSTEM_LIBRARY} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
#         add_test(NAME ${testName} COMMAND ${testName})
#     endforeach(testSrc)
# else()
#     message(STATUS "Boost not found. You won't be able to run nor develop tests for Cadmium.")
# endif()